ajout du readme

--- a/index.html
+++ b/index.html
@@ -49,7 +49,259 @@
           Morbi eu ante sapien. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi tristique nibh eget ante tincidunt ornare. Sed accumsan lacus lorem, a pellentesque sapien efficitur mattis. Sed fermentum nibh quis ligula suscipit vestibulum. Praesent auctor tincidunt elit. Nullam pellentesque sed velit et fermentum. Donec a leo non tellus hendrerit auctor et convallis enim. Proin quis elit ultrices, tempus lacus quis, facilisis metus. Sed non tempus lectus, ac venenatis lectus. Duis blandit eros et vehicula facilisis. Aenean sed vehicula eros, in venenatis ligula. Duis quis risus metus. Vivamus id ligula ante.
         </div>
 
-        <hr>
+        <!-- <hr> -->
+
+        <div class="album-artiste">
+          <div class="pochette-album">
+            <img src="img/RIDSA_pochette-album.jpg" alt="RIDSA - Mes histoires">
+          </div>
+
+          <ul class="titres-album">
+            <li>
+              <span class="numero-titre">1.</span>
+              <span class="titre-titre">Oh mama</span>
+              <span class="duree-titre">3:21</span>
+            </li>
+            <li>
+              <span class="numero-titre">2.</span>
+              <span class="titre-titre">Solo</span>
+              <span class="duree-titre">3:40</span>
+            </li>
+            <li>
+              <span class="numero-titre">3.</span>
+              <span class="titre-titre">Family (feat. Wanz)</span>
+              <span class="duree-titre">3:32</span>
+            </li>
+            <li>
+              <span class="numero-titre">4.</span>
+              <span class="titre-titre">À la tienne</span>
+              <span class="duree-titre">3:54</span>
+            </li>
+            <li>
+              <span class="numero-titre">5.</span>
+              <span class="titre-titre">Quoi qu'on en dise</span>
+              <span class="duree-titre">4:17</span>
+            </li>
+            <li>
+              <span class="numero-titre">6.</span>
+              <span class="titre-titre">Elle a mal</span>
+              <span class="duree-titre">3:38</span>
+            </li>
+            <li>
+              <span class="numero-titre">7.</span>
+              <span class="titre-titre">On s'évade</span>
+              <span class="duree-titre">3:15</span>
+            </li>
+            <li>
+              <span class="numero-titre">8.</span>
+              <span class="titre-titre">Ne m'oublie pas</span>
+              <span class="duree-titre">3:52</span>
+            </li>
+            <li>
+              <span class="numero-titre">9.</span>
+              <span class="titre-titre">Fais le vide (feat. Dieselle)</span>
+              <span class="duree-titre">3:24</span>
+            </li>
+            <li>
+              <span class="numero-titre">10.</span>
+              <span class="titre-titre">Mes histoires</span>
+              <span class="duree-titre">3:36</span>
+            </li>
+            <li>
+              <span class="numero-titre">11.</span>
+              <span class="titre-titre">Je cours</span>
+              <span class="duree-titre">3:34</span>
+            </li>
+            <li>
+              <span class="numero-titre">12.</span>
+              <span class="titre-titre">Amour sans fin</span>
+              <span class="duree-titre">3:08</span>
+            </li>
+            <li>
+              <span class="numero-titre">13.</span>
+              <span class="titre-titre">Laisse-moi parler</span>
+              <span class="duree-titre">7:03</span>
+            </li>
+            <li>
+              <span class="numero-titre">14.</span>
+              <span class="titre-titre">Adios (feat. Pépé Rosso & Angèle)</span>
+              <span class="duree-titre">3:26</span>
+            </li>
+            <li>
+              <span class="numero-titre">15.</span>
+              <span class="titre-titre">Nous et seulement nous (feat. Angele)</span>
+              <span class="duree-titre">3:44</span>
+            </li>
+          </ul>
+        </div>
+
+        <div class="album-artiste">
+          <div class="pochette-album">
+            <img src="img/RIDSA_pochette-album.jpg" alt="RIDSA - Mes histoires">
+          </div>
+
+          <ul class="titres-album">
+            <li>
+              <span class="numero-titre">1.</span>
+              <span class="titre-titre">Oh mama</span>
+              <span class="duree-titre">3:21</span>
+            </li>
+            <li>
+              <span class="numero-titre">2.</span>
+              <span class="titre-titre">Solo</span>
+              <span class="duree-titre">3:40</span>
+            </li>
+            <li>
+              <span class="numero-titre">3.</span>
+              <span class="titre-titre">Family (feat. Wanz)</span>
+              <span class="duree-titre">3:32</span>
+            </li>
+            <li>
+              <span class="numero-titre">4.</span>
+              <span class="titre-titre">À la tienne</span>
+              <span class="duree-titre">3:54</span>
+            </li>
+            <li>
+              <span class="numero-titre">5.</span>
+              <span class="titre-titre">Quoi qu'on en dise</span>
+              <span class="duree-titre">4:17</span>
+            </li>
+            <li>
+              <span class="numero-titre">6.</span>
+              <span class="titre-titre">Elle a mal</span>
+              <span class="duree-titre">3:38</span>
+            </li>
+            <li>
+              <span class="numero-titre">7.</span>
+              <span class="titre-titre">On s'évade</span>
+              <span class="duree-titre">3:15</span>
+            </li>
+            <li>
+              <span class="numero-titre">8.</span>
+              <span class="titre-titre">Ne m'oublie pas</span>
+              <span class="duree-titre">3:52</span>
+            </li>
+            <li>
+              <span class="numero-titre">9.</span>
+              <span class="titre-titre">Fais le vide (feat. Dieselle)</span>
+              <span class="duree-titre">3:24</span>
+            </li>
+            <li>
+              <span class="numero-titre">10.</span>
+              <span class="titre-titre">Mes histoires</span>
+              <span class="duree-titre">3:36</span>
+            </li>
+            <li>
+              <span class="numero-titre">11.</span>
+              <span class="titre-titre">Je cours</span>
+              <span class="duree-titre">3:34</span>
+            </li>
+            <li>
+              <span class="numero-titre">12.</span>
+              <span class="titre-titre">Amour sans fin</span>
+              <span class="duree-titre">3:08</span>
+            </li>
+            <li>
+              <span class="numero-titre">13.</span>
+              <span class="titre-titre">Laisse-moi parler</span>
+              <span class="duree-titre">7:03</span>
+            </li>
+            <li>
+              <span class="numero-titre">14.</span>
+              <span class="titre-titre">Adios (feat. Pépé Rosso & Angèle)</span>
+              <span class="duree-titre">3:26</span>
+            </li>
+            <li>
+              <span class="numero-titre">15.</span>
+              <span class="titre-titre">Nous et seulement nous (feat. Angele)</span>
+              <span class="duree-titre">3:44</span>
+            </li>
+          </ul>
+        </div>
+
+        <div class="album-artiste">
+          <div class="pochette-album">
+            <img src="img/RIDSA_pochette-album.jpg" alt="RIDSA - Mes histoires">
+          </div>
+
+          <ul class="titres-album">
+            <li>
+              <span class="numero-titre">1.</span>
+              <span class="titre-titre">Oh mama</span>
+              <span class="duree-titre">3:21</span>
+            </li>
+            <li>
+              <span class="numero-titre">2.</span>
+              <span class="titre-titre">Solo</span>
+              <span class="duree-titre">3:40</span>
+            </li>
+            <li>
+              <span class="numero-titre">3.</span>
+              <span class="titre-titre">Family (feat. Wanz)</span>
+              <span class="duree-titre">3:32</span>
+            </li>
+            <li>
+              <span class="numero-titre">4.</span>
+              <span class="titre-titre">À la tienne</span>
+              <span class="duree-titre">3:54</span>
+            </li>
+            <li>
+              <span class="numero-titre">5.</span>
+              <span class="titre-titre">Quoi qu'on en dise</span>
+              <span class="duree-titre">4:17</span>
+            </li>
+            <li>
+              <span class="numero-titre">6.</span>
+              <span class="titre-titre">Elle a mal</span>
+              <span class="duree-titre">3:38</span>
+            </li>
+            <li>
+              <span class="numero-titre">7.</span>
+              <span class="titre-titre">On s'évade</span>
+              <span class="duree-titre">3:15</span>
+            </li>
+            <li>
+              <span class="numero-titre">8.</span>
+              <span class="titre-titre">Ne m'oublie pas</span>
+              <span class="duree-titre">3:52</span>
+            </li>
+            <li>
+              <span class="numero-titre">9.</span>
+              <span class="titre-titre">Fais le vide (feat. Dieselle)</span>
+              <span class="duree-titre">3:24</span>
+            </li>
+            <li>
+              <span class="numero-titre">10.</span>
+              <span class="titre-titre">Mes histoires</span>
+              <span class="duree-titre">3:36</span>
+            </li>
+            <li>
+              <span class="numero-titre">11.</span>
+              <span class="titre-titre">Je cours</span>
+              <span class="duree-titre">3:34</span>
+            </li>
+            <li>
+              <span class="numero-titre">12.</span>
+              <span class="titre-titre">Amour sans fin</span>
+              <span class="duree-titre">3:08</span>
+            </li>
+            <li>
+              <span class="numero-titre">13.</span>
+              <span class="titre-titre">Laisse-moi parler</span>
+              <span class="duree-titre">7:03</span>
+            </li>
+            <li>
+              <span class="numero-titre">14.</span>
+              <span class="titre-titre">Adios (feat. Pépé Rosso & Angèle)</span>
+              <span class="duree-titre">3:26</span>
+            </li>
+            <li>
+              <span class="numero-titre">15.</span>
+              <span class="titre-titre">Nous et seulement nous (feat. Angele)</span>
+              <span class="duree-titre">3:44</span>
+            </li>
+          </ul>
+        </div>
 
         <div class="album-artiste">
           <div class="pochette-album">
