ajout du readme modifs

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </aside>
 
     <section id="main" class="conteneur">
-      <h2 class="hidden">Titre masqué</h2>
+      <!-- <h2 class="hidden">Titre masqué</h2> -->
 
       <article class="contenu">
 
@@ -51,7 +51,7 @@
 
         <!-- <hr> -->
 
-        <div class="album-artiste">
+        <div class="album-artiste pochette-droite">
           <div class="pochette-album">
             <img src="img/RIDSA_pochette-album.jpg" alt="RIDSA - Mes histoires">
           </div>
